스타일:매칭페이지 프론트&지도API

--- a/flirdog/src/main/webapp/public/index.html
+++ b/flirdog/src/main/webapp/public/index.html
@@ -63,6 +63,9 @@
       crossorigin
     ></script>
 
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5ce710c68c9c9901121edb8e9fae3023&libraries=services,clusterer,drawing">
+    </script>
+
     <script>
       var Alert = ReactBootstrap.Alert;
     </script>
