--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -63,8 +63,13 @@
       crossorigin
     ></script>
 
+    <!-- 카카오맵 -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5ce710c68c9c9901121edb8e9fae3023&libraries=services,clusterer,drawing">
     </script>
+
+    <!-- 부트스트랩 -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
 
     <script>
       var Alert = ReactBootstrap.Alert;
